[gd_scene load_steps=3 format=3 uid="uid://3svmxs0006ao"]

[ext_resource type="Script" path="res://menu_scene.gd" id="1_0wixr"]
[ext_resource type="Texture2D" uid="uid://ctucab3c3tous" path="res://backs/room_bg.png" id="2_q3i16"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wixr")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(509.625, 513.618)
scale = Vector2(1.00269, 1.00072)
texture = ExtResource("2_q3i16")

[node name="Blackout" type="ColorRect" parent="."]
offset_right = 1025.0
offset_bottom = 1025.0
color = Color(0, 0, 0, 0)

[node name="StartGameButton" type="Button" parent="."]
offset_left = 376.0
offset_top = 636.0
offset_right = 621.0
offset_bottom = 719.0
text = "НОВАЯ ИГРА"

[node name="ContinueGameButton" type="Button" parent="."]
offset_left = 376.0
offset_top = 742.0
offset_right = 621.0
offset_bottom = 825.0
text = "ПРОДОЛЖИТЬ"

[node name="ExitGameButton" type="Button" parent="."]
offset_left = 376.0
offset_top = 849.0
offset_right = 621.0
offset_bottom = 932.0
text = "ВЫХОД"

[node name="TitleLabel" type="Label" parent="."]
offset_left = 313.0
offset_top = 288.0
offset_right = 692.0
offset_bottom = 398.0
theme_override_font_sizes/font_size = 80
text = "УХИЛЯНТИ"
